test/negative/metal_dynamic_access/compile.viability.hxml
-cp .
-lib reflaxe.rust
-D reflaxe_rust_profile=metal
-D rust_metal_allow_fallback
-D rust_metal_viability_warn
-D rust_metal_viability_report
-D rust_no_build
-D rust_output=out
-main Main
